--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@glidejs/glide": "^3.6.0",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,7 +17,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "tiny-slider": "^2.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
