--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@glidejs/glide": "^3.6.0",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
