--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "animate.css": "^4.1.1",
     "classnames": "^2.3.2",
     "font-awesome": "^4.7.0",
+    "i18next": "^23.7.16",
+    "i18next-browser-languagedetector": "^7.2.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
